--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,13 @@ h2{
 
 h3{
    font-size: 3rem; 
-   margin-bottom: .5rem;
+   margin-bottom: 0rem;
+}
+@media (min-width: 768px) {
+  h3{
+    font-size: 3rem; 
+    margin-bottom: 2rem;
+ }
 }
 
 /*Header*/
