--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,11 @@ h3{
   display: flex;
   flex-direction: column;
 }
+.nosotros .video {
+  width: 640px;
+  height: 480px;
+}
+
 
 @media (min-width: 768px){
   .nosotros{
@@ -185,6 +190,10 @@ h3{
     grid-template-columns: repeat(2, 1fr);
     column-gap: 3rem;  
     align-items: center;
+  }
+  .nosotros .video {
+    width: 468px;
+    height: 263px;
   }
 }
 
