--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,9 @@ h3{
   display: flex;
   flex-direction: column;
 }
-.video {
-  height: 468px;
+.resoluciones {
+  width:640px;
+  height:360px
 }
 
 @media (min-width: 768px){
@@ -189,10 +190,6 @@ h3{
     grid-template-columns: repeat(2, 1fr);
     column-gap: 3rem; 
     align-items: center; 
-  }
-  .video {
-    width:640px;
-    height:360px
   }
 }
 
